--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,8 @@
 PORT = 8000
 CORS_ORIGIN =*
+ACCESS_TOKEN_SECRET = AryanSuryawanshi
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = AryanSuryawanshiRefresh
+REFRESH_TOKEN_EXPIRY = 10d
 
 MONGODB_URI = mongodb+srv://aryanpunaji20:2tdE9Hu6N5kJLF96@cluster0.bp2p3ck.mongodb.net
