--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,8 @@ ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = AryanSuryawanshiRefresh
 REFRESH_TOKEN_EXPIRY = 10d
 
+CLOUDINARY_CLOUD_NAME =
+CLOUDINARY_API_KEY =
+CLOUDINARY_API_SECRET =
+
 MONGODB_URI = mongodb+srv://aryanpunaji20:2tdE9Hu6N5kJLF96@cluster0.bp2p3ck.mongodb.net
